--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -17,13 +17,13 @@ main:
   #   url: '#talks'
   #   weight: 40
   - name: Publications
-    url: '#featured'
+    url: '#publication'
     weight: 50
   - name: Teaching
     url: '#teaching'
     weight: 60
   - name: CV
-    url: uploads/resume.pdf
+    url: uploads/CV.pdf
     weight: 70
   - name: Contact
     url: '#contact'
