--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -43,7 +43,7 @@ header:
 
 footer:
   copyright:
-    notice: '© Sam Hyun Yoo 2018. This work is licensed under {license}'
+    notice: '©2018 Sam Hyun Yoo· This work is licensed under {license}'
     license:
       enable: true
       allow_derivatives: false
