--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -22,12 +22,19 @@ main:
   - name: Teaching
     url: '#teaching'
     weight: 60
+  - name: Courses
+    url: '#course'
+    weight: 80
+  - name: Data Analysis
+    PageRef: course/data-analysis/_index.md
+    weight: 10
+    parent: courses
   - name: CV
     url: uploads/CV.pdf
-    weight: 70
+    weight: 80
   - name: Contact
     url: '#contact'
-    weight: 80
+    weight: 90
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
