--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -7,6 +7,21 @@ title: Sam Hyun Yoo # Website name
 baseURL: 'https://samhyunyoo.rbind.io/' # Website URL
 
 ############################
+## PAGE OPTIONS
+############################
+
+cascade:
+  # Docs folder options
+  - _target:
+      path: /course/**
+    editable: true
+    show_breadcrumb: true
+  # Blog post folder options
+  # - _target:
+  #     path: /post/**
+  #   show_related: true
+
+############################
 ## LANGUAGE
 ############################
 
