--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -29,12 +29,15 @@ main:
     PageRef: course/data-analysis/_index.md
     weight: 10
     parent: Courses
+  - name: Lecture
+    url: '#lecture'
+    weight: 80
   - name: CV
     url: uploads/CV.pdf
-    weight: 80
+    weight: 90
   - name: Contact
     url: '#contact'
-    weight: 90
+    weight: 100
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
